src/styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

html,
body {
  height: 100%;
}

body {
  font-family: var(--font-sans);
  line-height: var(--font-lineheight-3);
  padding: var(--size-fluid-2);
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

p {
  margin-block: var(--size-fluid-1) var(--size-fluid-3);
}

#radar {
  margin: 0 auto;
}

.columns {
  display: flex;
  flex-wrap: wrap;
  gap: var(--size-fluid-5);
}

.columns > * {
  flex-grow: 1;
  flex-basis: calc((70rem - 100%) * 999);
}

.columns > :nth-last-child(n + 3),
.columns > :nth-last-child(n + 3) ~ * {
  flex-basis: 100%;
}

